Oct-2021/jenkins-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: jenkins
  name: jenkins
spec:
  securityContext:
    runAsUser: 0
    fsGroup: 0
  containers:
  - image: jenkins/jenkins
    name: jenkins
