Oct-2021/myapp-v1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: myapp-v1-pod
  name: myapp-v1-pod
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:1
    name: kuard
    resources:
      requests:
        # 0.5 CPU core - 500m
        cpu: "500m"
        memory: "128Mi"
      limits:
        cpu: "500m"
        memory: "500Mi"
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
