Oct-2021/mypod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mypod
  name: mypod
spec:
  imagePullSecrets:
  - name: dockerhubcreds
  containers:
  - image: pullai2hew/prime
    name: mypod
