Oct-2021/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ngins-deploy
  name: ngins-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ngins-deploy
  strategy: {}
  template:
    metadata:
      labels:
        app: ngins-deploy
    spec:
      containers:
      - image: nginx:1.20
        name: nginx
