Oct-2021/nginx-env.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-env
  name: nginx-env
spec:
  containers:
  - env:
    - name: NGINX_PORT
      value: "80"
    image: nginx
    name: nginx-env
