Oct-2021/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    team: dev
  labels:
    app: nginx
    type: frontend
  name: nginx
spec:
  nodeSelector:
    node: node1
  containers:
  - image: nginx
    name: nginx
