Oct-2021/qa-allow-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qa-allow-netpol
spec:
  podSelector:
    matchLabels:
      env: test
  ingress:
  - from:
    - podSelector:
        matchLabels:
          env: qa
    ports:
    - protocol: TCP
      port: 80
